// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularProgress can be determinate 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.3"
    class="mdc-circular-progress"
    role="progressbar"
    style="font-size: 24px; width: 24px; height: 24px;"
  >
    <div
      class="mdc-circular-progress__determinate-container"
    >
      <svg
        class="mdc-circular-progress__determinate-circle-graphic"
        viewBox="0 0 24 24"
      >
        <circle
          class="mdc-circular-progress__determinate-track"
          cx="12"
          cy="12"
          r="10"
          stroke-width="4"
        />
        <circle
          class="mdc-circular-progress__determinate-circle"
          cx="12"
          cy="12"
          r="10"
          stroke-dashoffset="43.982297150257104"
          stroke-width="4"
          style="stroke-dasharray: 18.84955592153876, 666.66%; width: 24px; height: 24px;"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CircularProgress renders 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    class="mdc-circular-progress mdc-circular-progress--indeterminate"
    role="progressbar"
    style="font-size: 24px; width: 24px; height: 24px;"
  >
    <div
      class="mdc-circular-progress__indeterminate-container"
    >
      <div
        class="mdc-circular-progress__spinner-layer"
      >
        <div
          class="mdc-circular-progress__circle-clipper mdc-circular-progress__circle-left"
        >
          <svg
            class="mdc-circular-progress__indeterminate-circle-graphic"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="8.75"
              stroke-dasharray="54.978"
              stroke-dashoffset="27.489"
              stroke-width="2.5"
            />
          </svg>
        </div>
        <div
          class="mdc-circular-progress__gap-patch"
        >
          <svg
            class="mdc-circular-progress__indeterminate-circle-graphic"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="8.75"
              stroke-dasharray="54.978"
              stroke-dashoffset="27.489"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="mdc-circular-progress__circle-clipper mdc-circular-progress__circle-right"
        >
          <svg
            class="mdc-circular-progress__indeterminate-circle-graphic"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="8.75"
              stroke-dasharray="54.978"
              stroke-dashoffset="27.489"
              stroke-width="2.5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
